cmake_minimum_required (VERSION 3.8)

project ("TitanRendererTesting")

add_subdirectory ("TitanRendererTesting")

add_subdirectory("3rdparty/glfw")
add_subdirectory("3rdparty/json")
add_subdirectory("3rdparty/glad")
add_subdirectory("3rdparty/entt")
add_subdirectory("3rdparty/glm")
add_subdirectory("3rdparty/assimp")
add_subdirectory("3rdparty/tinyobj")